// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categories-list Renders \`categories-list\` with custom props 1`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-list pa-0 v-list--dense theme--dark"
    role="list"
  >
    <category-links-stub
      links="[object Object]"
    />
    <!---->
  </div>
</div>
`;

exports[`categories-list Renders \`categories-list\` with custom props 2`] = `
<div
  class="v-list pa-0 v-list--dense theme--light transparent"
  role="list"
>
  <category-links-stub
    links="[object Object]"
  />
  <div
    class="v-menu"
  >
    <button
      class="v-btn v-btn--block v-btn--flat v-btn--small theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        ...
      </div>
    </button>
    <transition-stub
      name="v-menu-transition"
    />
  </div>
</div>
`;

exports[`categories-list Renders \`categories-list\` with default props 1`] = `
<div
  class="v-list pa-0 v-list--dense theme--dark"
  role="list"
/>
`;
